fixing so we get the scrollbar in the proper place for the vizualization.

--- a/public/sass/pages/_dashboard.scss
+++ b/public/sass/pages/_dashboard.scss
@@ -102,11 +102,22 @@ div.flot-text {
   width: 100%;
   flex-grow: 1;
   height: calc(100% - #{$panel-header-height});
+  overflow: hidden;
 
   &--no-padding {
     padding: 0;
   }
+
+  &--scrollable-y {
+    overflow: hidden auto;
+    margin-bottom: $panel-padding;
+  }
+
+  &--no-padding.panel-content--scrollable-y {
+    margin-bottom: 0;
+  }
 }
+
 .dashboard-header {
   font-size: $font-size-h2;
   text-align: center;
